--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -7,6 +7,7 @@
 <div class="container">
     <h1>로그인</h1>
     <form action="/loginProc" method="post">
+    		<input type="hidden" value="" th:value="${userId}"/>
         <div class="form-group">
             <label th:for="username">아이디</label>
             <input type="text" name="username" class="form-control" placeholder="아이디 입력해주세요">
@@ -16,7 +17,9 @@
             <input type="password" class="form-control" name="password" placeholder="비밀번호 입력해주세요">
         </div>
         <button type="submit" class="btn btn-primary">로그인</button>
-        <button type="button" class="btn btn-primary" onClick="location.href='signUp'">회원 가입</button>
+        <button type="button" class="btn btn-primary" 
+        		onClick="location.href='signUp'"
+        		th:onClick="|location.href='@{/signUp}'|">회원 가입</button>
     </form>
     <br/>
 </div>
